# gds_ai_api

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  SUMMARY.md  docker-compose.yml  pyproject.toml
code/: excute.py  transnetv2.py
infra/minio/: init-buckets.sh
infra/nginx/: nginx.conf
infra/postgres/: init.sql
infra/rabbitmq/: rabbitmq.conf
migrations/: Dockerfile  alembic.ini  env.py  requirements.txt
migrations/versions/: 001_initial_schema.py  002_add_auth_rbac.py  003_add_upload_batch.py  004_user_profile_video_hash.py  005_learning_analytics.py
src/api/: Dockerfile  pyproject.toml
src/api/api/: config.py  dependencies.py  main.py
src/api/api/core/: security.py
src/api/api/dependencies/: __init__.py  auth.py
src/api/api/routers/: auth.py  jobs.py  lectures.py  organizations.py  programs.py  progress.py  search.py  upload.py
src/api/api/schemas/: auth.py  job.py  lecture.py  search.py  upload.py
src/chatbot/: Dockerfile  pyproject.toml
src/chatbot/chatbot/: config.py  main.py
src/chatbot/chatbot/agent/: prompts.py  router.py  state.py
src/chatbot/chatbot/agent/tools/: admin_tools.py  graph_rag.py  learning_tool.py  manage_lectures.py  query_database.py  query_postgres.py  search_lectures.py  stats_tool.py  vector_search.py
src/chatbot/chatbot/core/: auth.py
src/chatbot/chatbot/graph_db/: client.py  queries.py  schema.py  sync.py
src/chatbot/chatbot/schemas/: chat.py
src/shared/: pyproject.toml
src/shared/shared/: config.py  logging.py
src/shared/shared/database/: connection.py  models.py
src/shared/shared/schemas/: common.py
src/worker/: Dockerfile  pyproject.toml
src/worker/worker/: app.py  celeryconfig.py  config.py
src/worker/worker/models/: clip_model.py  loader.py  ocr_model.py  text_embed_model.py  transnetv2_model.py  whisper_model.py
src/worker/worker/tasks/: asr.py  clip_embed.py  indexing.py  ocr.py  pipeline.py  scene_detection.py
src/worker/worker/utils/: db.py  storage.py  video.py
tests/: conftest.py
tests/unit/: test_scene_detection.py  test_search.py
